--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "dependencies": {
+    "@nestjs/mapped-types": "*"
+  },
   "name": "turborepo-basic-shared",
   "version": "0.0.0",
   "private": true,
